ride shod too menu

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,4 +13,5 @@
     <string name="friends">دوستان</string>
     <string name="shop">خرید</string>
     <string name="settings">تنظیمات</string>
+    <string name="skills">skills</string>
 </resources>
